ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|         - GUI:                                                  |
|               * to fix: no errors on adding user (custom HP)    |
\_________________________________________________________________/

2007-10-17 Benedikt Heintel
	- SETUP:
		* Fixed #783: added Makefile.gentoo
		* Fixed #784: ispcp-setup fails with compilation errors
		* Fixed #785: bad test into configs/init.d/Makefile

2007-10-16 Raphael Geissert
    - ENGINE:
        * Improved entropy pool seeding code
    - SETUP:
        * Fixed #782: cannot stat `./setup/vhcs2ispcp.pl': No such file or directory

2007-10-16 Benedikt Heintel
	- DISTS:
		* Updated ubuntu
	- ENGINE:
		* Fixed #7: Improvement of static AWStats
		* Fixed #7: Removed static dirs from conf filess
		* Fixed #55: Part I: Update Script from VHCS 2.4.7.1 to ispCP ω 1.0.0
		* Fixed #768: perl ispcp-setup - does not work
		* Fixed #779: Makefile Error
		* Fixed #781: htdocs folder is empty (on new installed domain)
		* Deleted: Old SASL vaiables and use of them

2007-10-16 Malte Geierhos
	- DATABASE:
		* Fixed #780: sql error during setup

2007-10-15 Raphael Geissert
    - LANGUAGES:
        * Updated Czech translation (thanks to Josef Pinc)
        * Updated German translation (thanks to the German translation team)
        * Updated the A=B files

2007-10-15 Benedikt Heintel
	- DOCS:
		* Updated: Fedora install script
	- ENGINE:
		* Fixed: Prevented Sub-/Alias-/Domainmanager from creating index.html, if directory exists
		* Fixed #774: AWStats not working
	- DATABASE
		* changed English language: Added drop

2007-10-15 Malte Geierhos
	- SETUP:
		* fixed #771 according to joximu
	- ENGINE:
		* fixed #773 perl errors in dmn-mngr

2007-10-15 Johannes Schobig
	- SETUP:
		* Ask before generating passwords

2007-10-14 Raphael Geissert
    - ENGINE: